--- a/HTML_BaseTraining/index.html
+++ b/HTML_BaseTraining/index.html
@@ -92,16 +92,24 @@
             </div>
 
             <div>
-                <label for="rate">Ratings: </label><br>
-                <select id="rate">
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5</option>
+                 <p><strong>Ratings:</strong> </p>
 
-                </select>
-            </div>
+                <input type="radio" id="1" name="rate">
+                <label for="1">1 star</label>
+
+                <input type="radio" id="2" name="rate">
+                <label for="2">2 stars</label>
+
+                <input type="radio" id="3" name="rate">
+                <label for="3" >3 stars</label>
+          
+                <input type="radio" id="star2" name="rate">
+                <label for="4" >4 stars</label>
+
+                <input type="radio" id="5" name="rate">
+                <label for="5" >5 stars</label>
+
+            </div></br>
     
             <div>
               <label for="message">Your Message: </label><br />
